test/expected/explain_main_f_v.out
explain void main()
        ^
9: error: main() must return int
